--- a/install
+++ b/install
@@ -82,8 +82,8 @@ fi
 
 
 VERSION="0.1.0-SNAPSHOT"
-INSTALL_DIR=$(pwd)
-#INSTALL_DIR=${1:-$(pwd)}
+mkdir -p bin
+INSTALL_DIR=$(pwd)/bin
 
 echo ""
 echo "Installing into $INSTALL_DIR (for local execution)"
@@ -155,7 +155,7 @@ if [ $(pwd) == "$INSTALL_DIR" ]; then
 else
 	echo "Creating directory $INSTALL_DIR and moving files..."
     mkdir -p $INSTALL_DIR
-    mv affine-fusion $INSTALL_DIR/
+    mv affine-fusion resave detect-interestpoints match-interestpoints stitching solver create-fusion-container affine-fusion nonrigid-fusion split-images downsample clear-interestpoints clear-registrations transform-points $INSTALL_DIR/
 fi
 
 rm cp.txt
